# teder-backend

./: .gitignore  pyproject.toml
teder_backend/: id_gen.py  main.py  manage_rooms.py  prompts.csv  prompts.py  room.py
tests/: test_teder_backend.py
